<resources>
    <string name="app_name">Splick</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Splick -->
    <string name="facebook_app_id">2488035537976636</string>
    <string name="fb_login_protocol_scheme">fb2488035537976636</string>
    <string name="no_posts_available">No posts available to show</string>

    <string name="kindly_follow">Kindly follow at least one business</string>
    <string name="todo">TODO</string>
    <string name="new_post">New Post</string>
    <string name="note_click_image_for_attachment">Note: Click image for attachment</string>
    <string name="write_your_caption">write your caption</string>
    <string name="description">Description</string>
    <string name="messages">Messages</string>
    <string name="search">Search...</string>
</resources>
