<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/splick_logo"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <ImageButton
                android:id="@+id/logout_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:foreground="@drawable/ic_chat"
                android:contentDescription="@string/todo" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewNewsFeed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/noDataFoundContainer"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_posts_available"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="#FC888686"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kindly_follow"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="#FC888686"/>
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>